NetBSD Problem Report #49937

From paul@whooppee.com  Sun May 31 07:37:26 2015
Return-Path: <paul@whooppee.com>
Received: from mail.netbsd.org (mail.netbsd.org [149.20.53.66])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (not verified))
	by mollari.NetBSD.org (Postfix) with ESMTPS id DA97EA65BB
	for <gnats-bugs@gnats.NetBSD.org>; Sun, 31 May 2015 07:37:25 +0000 (UTC)
Message-Id: <20150531073724.9657F6FCC6@vps1.whooppee.com>
Date: Sun, 31 May 2015 15:37:24 +0800 (PHT)
From: paul@whooppee.com
Reply-To: paul@whooppee.com
To: gnats-bugs@gnats.NetBSD.org
Subject: terminal handling bug in games/tetris
X-Send-Pr-Version: 3.95

>Number:         49937
>Category:       bin
>Synopsis:       tetris(6) pause (keystroke p) handling error
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    bin-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sun May 31 07:40:00 +0000 2015
>Closed-Date:    Sat Jun 13 04:22:11 +0000 2015
>Last-Modified:  Sat Jun 13 04:22:11 +0000 2015
>Originator:     Paul Goyette
>Release:        NetBSD 7.99.15
>Organization:
-------------------------------------------------------------------------
| Paul Goyette     | PGP Key fingerprint:     | E-mail addresses:       |
| (Retired)        | FA29 0E3B 35AF E8AE 6651 | paul at whooppee.com    |
| Kernel Developer | 0786 F758 55DE 53BA 7731 | pgoyette at netbsd.org  |
-------------------------------------------------------------------------
>Environment:
System: NetBSD pokey.whooppee.com 7.99.15 NetBSD 7.99.15 (POKEY 2015-04-09 09:49:29) #1: Sun May  3 17:01:17 PHT 2015  paul@pokey.whooppee.com:/build/netbsd-local/obj/amd64/sys/arch/amd64/compile/POKEY amd64
Architecture: x86_64
Machine: amd64
>Description:
	Log in to NetBSD on a xterm and run tetris(6).  Use the keystroke
	'p' to pause the game.  Press the 'p' again and again.  for each
	additional 'p', a 'j' character is echoed on the lower-right and
	the bottom "boundary" line creeps toward the top of the screen.
	As a result, the display is completely garbled, and there does
	not seem to be any "repaint" capability.

>How-To-Repeat:
	See above
>Fix:
	I don't know how to fix.  However, I have verified that the
	image for tetris(6) supplied with NetBSD 6.1.5 does _not_
	exhibit the erroneous behavior.


>Release-Note:

>Audit-Trail:
From: "David A. Holland" <dholland@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/49937 CVS commit: src/games/tetris
Date: Sat, 13 Jun 2015 04:15:51 +0000

 Module Name:	src
 Committed By:	dholland
 Date:		Sat Jun 13 04:15:51 UTC 2015

 Modified Files:
 	src/games/tetris: tetris.c

 Log Message:
 Fix the list of keys across the bottom so it fits on an 80-column screen
 again. Fixes PR 49937.

 HI MRG


 To generate a diff of this commit:
 cvs rdiff -u -r1.28 -r1.29 src/games/tetris/tetris.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Sat, 13 Jun 2015 04:22:11 +0000
State-Changed-Why:
fixed.
would be nice to fix it so it worked on narrow screens too, but some other
year...


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.