Fix the list of keys across the bottom so it fits on an 80-column screen again. Fixes PR 49937.

HI MRG